--- a/otmb2019.ucf
+++ b/otmb2019.ucf
@@ -70,3 +70,38 @@ NET "rxp[7]" LOC = R3;
 
 #NET "reset"  LOC = U25;
 #NET "inject" LOC = U26;
+
+NET "_ccb_rx<18>"	LOC = "AB28";	# I/O_20
+NET "_ccb_rx<19>"	LOC = "AH30";	# I/O_21
+NET "_ccb_rx<20>"	LOC = "AK33";	# I/O_22
+NET "_ccb_rx<21>"	LOC = "AK34";	# I/O_23
+NET "_ccb_rx<22>"	LOC = "AL33";	# I/O_24
+NET "_ccb_rx<23>"	LOC = "AL31";	# I/O_25
+NET "_ccb_rx<24>"	LOC = "AL30";	# I/O_26
+NET "_ccb_rx<25>"	LOC = "AK32";	# I/O_27
+NET "_ccb_rx<26>"	LOC = "AL34";	# I/O_28
+NET "_ccb_rx<27>"	LOC = "AJ30";	# I/O_29
+NET "_ccb_rx<28>"	LOC = "AJ29";	# I/O_30
+NET "_ccb_rx<29>"	LOC = "AH29";	# I/O_31
+NET "_ccb_rx<30>"	LOC = "AM33";	# I/O_32
+NET "_ccb_rx<31>"	LOC = "AN34";	# I/O_33
+NET "_ccb_rx<32>"	LOC = "AN33";	# I/O_34
+NET "_ccb_rx<33>"	LOC = "AP33";	# I/O_35
+NET "_ccb_rx<0>"	LOC = "AG28";	# I/O_36
+NET "_ccb_rx<1>"	LOC = "AM32";	# I/O_37
+NET "_ccb_rx<2>"	LOC = "AN32";	# I/O_38
+NET "_ccb_rx<3>"	LOC = "AG27";	# I/O_39
+NET "_ccb_rx<4>"	LOC = "AC25";	# I/O_40
+NET "_ccb_rx<5>"	LOC = "AD27";	# I/O_41
+NET "_ccb_rx<6>"	LOC = "AP32";	# I/O_42
+NET "_ccb_rx<7>"	LOC = "AM31";	# I/O_43
+NET "_ccb_rx<8>"	LOC = "AP30";	# I/O_44
+NET "_ccb_rx<9>"	LOC = "AF26";	# I/O_45
+NET "_ccb_rx<10>"	LOC = "AE27";	# I/O_46
+NET "_ccb_rx<11>"	LOC = "AD25";	# I/O_47
+NET "_ccb_rx<12>"	LOC = "AD26";	# I/O_48
+NET "_ccb_rx<13>"	LOC = "AE26";	# I/O_49
+NET "_ccb_rx<14>"	LOC = "AM30";	# I/O_50
+NET "_ccb_rx<15>"	LOC = "AP29";	# I/O_51
+NET "_ccb_rx<16>"	LOC = "AM28";	# I/O_52
+NET "_ccb_rx<17>"	LOC = "AK31";	# I/O_53
