--- a/otmb2019.ucf
+++ b/otmb2019.ucf
@@ -71,22 +71,6 @@ NET "rxp[7]" LOC = R3;
 #NET "reset"  LOC = U25;
 #NET "inject" LOC = U26;
 
-NET "_ccb_rx<18>"	LOC = "AB28";	# I/O_20
-NET "_ccb_rx<19>"	LOC = "AH30";	# I/O_21
-NET "_ccb_rx<20>"	LOC = "AK33";	# I/O_22
-NET "_ccb_rx<21>"	LOC = "AK34";	# I/O_23
-NET "_ccb_rx<22>"	LOC = "AL33";	# I/O_24
-NET "_ccb_rx<23>"	LOC = "AL31";	# I/O_25
-NET "_ccb_rx<24>"	LOC = "AL30";	# I/O_26
-NET "_ccb_rx<25>"	LOC = "AK32";	# I/O_27
-NET "_ccb_rx<26>"	LOC = "AL34";	# I/O_28
-NET "_ccb_rx<27>"	LOC = "AJ30";	# I/O_29
-NET "_ccb_rx<28>"	LOC = "AJ29";	# I/O_30
-NET "_ccb_rx<29>"	LOC = "AH29";	# I/O_31
-NET "_ccb_rx<30>"	LOC = "AM33";	# I/O_32
-NET "_ccb_rx<31>"	LOC = "AN34";	# I/O_33
-NET "_ccb_rx<32>"	LOC = "AN33";	# I/O_34
-NET "_ccb_rx<33>"	LOC = "AP33";	# I/O_35
 NET "_ccb_rx<0>"	LOC = "AG28";	# I/O_36
 NET "_ccb_rx<1>"	LOC = "AM32";	# I/O_37
 NET "_ccb_rx<2>"	LOC = "AN32";	# I/O_38
@@ -105,3 +89,36 @@ NET "_ccb_rx<14>"	LOC = "AM30";	# I/O_50
 NET "_ccb_rx<15>"	LOC = "AP29";	# I/O_51
 NET "_ccb_rx<16>"	LOC = "AM28";	# I/O_52
 NET "_ccb_rx<17>"	LOC = "AK31";	# I/O_53
+NET "_ccb_rx<18>"	LOC = "AB28";	# I/O_20
+NET "_ccb_rx<19>"	LOC = "AH30";	# I/O_21
+NET "_ccb_rx<20>"	LOC = "AK33";	# I/O_22
+NET "_ccb_rx<21>"	LOC = "AK34";	# I/O_23
+NET "_ccb_rx<22>"	LOC = "AL33";	# I/O_24
+NET "_ccb_rx<23>"	LOC = "AL31";	# I/O_25
+NET "_ccb_rx<24>"	LOC = "AL30";	# I/O_26
+NET "_ccb_rx<25>"	LOC = "AK32";	# I/O_27
+NET "_ccb_rx<26>"	LOC = "AL34";	# I/O_28
+NET "_ccb_rx<27>"	LOC = "AJ30";	# I/O_29
+NET "_ccb_rx<28>"	LOC = "AJ29";	# I/O_30
+NET "_ccb_rx<29>"	LOC = "AH29";	# I/O_31
+NET "_ccb_rx<30>"	LOC = "AM33";	# I/O_32
+NET "_ccb_rx<31>"	LOC = "AN34";	# I/O_33
+NET "_ccb_rx<32>"	LOC = "AN33";	# I/O_34
+NET "_ccb_rx<33>"	LOC = "AP33";	# I/O_35
+NET "_ccb_rx<34>"	LOC = "AA26";	# I/O_491
+NET "_ccb_rx<35>"	LOC = "AB27";	# I/O_492
+NET "_ccb_rx<36>"	LOC = "AA28";	# I/O_516
+NET "_ccb_rx<37>"	LOC = "Y27";	# I/O_477
+NET "_ccb_rx<38>"	LOC = "AA29";	# I/O_478
+NET "_ccb_rx<39>"	LOC = "AG32";	# I/O_479
+NET "_ccb_rx<40>"	LOC = "AA30";	# I/O_480
+NET "_ccb_rx<41>"	LOC = "Y29";	# I/O_481
+NET "_ccb_rx<42>"	LOC = "Y26";	# I/O_482
+NET "_ccb_rx<43>"	LOC = "AG31";	# I/O_483
+NET "_ccb_rx<44>"	LOC = "AH34";	# I/O_484
+NET "_ccb_rx<45>"	LOC = "AJ34";	# I/O_485
+NET "_ccb_rx<46>"	LOC = "AA31";	# I/O_486
+NET "_ccb_rx<47>"	LOC = "Y28";	# I/O_487
+NET "_ccb_rx<48>"	LOC = "AH33";	# I/O_488
+NET "_ccb_rx<49>"	LOC = "AA25";	# I/O_489
+NET "_ccb_rx<50>"	LOC = "AH32";	# I/O_490
